tests/data/auth-basic-secrets/mergeable/auth-basic-secrets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-basic-secrets-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  rules:
  - host: auth-basic-secrets.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-basic-secrets-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: auth-basic-secrets.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-basic-secrets-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/basic-auth-secret: "auth-basic-secrets-key"
    nginx.org/basic-auth-realm: "AuthBasic Secrets App"
spec:
  rules:
  - host: auth-basic-secrets.example.com
    http:
      paths:
      - path: /backend2
        pathType: Prefix
        backend:
          service:
            name: backend2-svc
            port:
              number: 80
